# ExplorationAlgorithm-SUTD

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/exploration/: colored_noise.h  exploration_code.hpp  mwfcn.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/autolab_core/share/autolab_core/: package.bash  package.zsh
install/exploration/lib/exploration/: exec_exp
install/exploration/share/exploration/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/map_merge_2d/lib/map_merge_2d/: map_merger
install/sim_env/share/sim_env/: package.sh  (+9 more)
install/tf_merger/share/tf_merger/: htx_tf_merger.launch.py  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tf_merger/share/tf_merger/config/: params.yaml
launch/: exp_launch.launch.py  exp_launch.py  exploration.launch.py  two_robot_exploration.launch.py  two_robot_simulation.launch.py
log/: latest_build
msg/: RobotState.msg
src/: colored_noise.cpp  exploration_code.cpp  exploration_node.cpp  mwfcn.cpp
src/exploration/: CMakeLists.txt  package.xml
src/exploration/config/: params.yaml
src/exploration/launch/: exp_launch.py  two_robot_exploration.launch.py
src/exploration/src/: exploration_code.cpp  exploration_node.cpp
src/map_merge_2d/: CMakeLists.txt  README.md
src/map_merge_2d/config/: params.yaml
src/map_merge_2d/include/map_merge_2d/: map_merger.hpp
src/map_merge_2d/include/map_merge_2d/cv_core/: cv_core.hpp  cv_helpers.hpp
src/map_merge_2d/include/map_merge_2d/map_discovery/: topic_discovery.hpp
src/map_merge_2d/include/map_merge_2d/submaps/: submap.hpp  submap_matcher.hpp  submap_merger.hpp
src/map_merge_2d/include/map_merge_2d/util/: tf_utils.hpp  topic_name_utils.hpp
src/map_merge_2d/launch/: map_merge_2d.launch.py
src/map_merge_2d/src/: map_merger.cpp  map_merger_node.cpp
src/map_merge_2d/src/cv_core/: cv_core.cpp
src/map_merge_2d/src/map_discovery/: topic_discovery.cpp
src/map_merge_2d/src/submaps/: submap.cpp  submap_matcher.cpp  submap_merger.cpp
src/map_merge_2d/src/util/: tf_utils.cpp  topic_name_utils.cpp
src/sim_env/: CMakeLists.txt
src/sim_env/launch/: multi_tb3_simulation_launch.py
src/tb3_sim/: CMakeLists.txt
src/tb3_sim/launch/: mapping.launch.py  multi_tb3_simulation_launch.py  navigation.launch.py  tb3_simulation_launch.py
src/tf_merger/: README.md  setup.py
src/tf_merger/config/: params_bak.yaml
src/tf_merger/launch/: tf_merger.launch.py
src/tf_publish/: package.xml  setup.cfg  setup.py
src/tf_publish/tf_publish/: publish_tf_for_two_robots.py
(+64 files in other folders)
